fix any machine sizing, fix overflow

--- a/website/src/index.scss
+++ b/website/src/index.scss
@@ -45,16 +45,11 @@ $bp-lg: 1024px;
     -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-    overflow-x: hidden;
-    max-width: 100vw;
+img {
+    overflow: hidden;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-
     background: var(--c-background);
 }
 
@@ -200,6 +195,8 @@ body {
     margin: 0 auto;
     min-height: 100vh;
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .Collapsible {
